
The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.033 devel

**    Add simplistic class support with many restrictions, see manual, #377.

**    Configuring with ccache present now defaults to using it; see OBJCACHE.

**    Fix DPI import/export to be standard compliant, #2236. [Geza Lore]

****  Support $ferror, and $fflush without arguments, #1638.


* Verilator 4.032 2020-04-04

***   Add column numbers to errors and warnings.

***   Add GCC 9-style line number prefix when showing source text for errors.

***   Add setting VM_PARALLEL_BUILDS=1 when using --output-split, #2185.

***   Change --quiet-exit to also suppress 'Exiting due to N errors'.

****  Suppress REALCVT for whole real numbers.

****  Support split_var in vlt files, #2219. [Marco Widmer]

****  Fix parameter type redeclaring a type, #2195. [hdzhangdoc]

****  Fix VCD open with empty filename, #2198. [Julius Baxter]

****  Fix packages as enum base types, #2202. [Driss Hafdi]

****  Fix duplicate typedefs in generate for, #2205. [hdzhangdoc]

****  Fix MinW portability, #2114. [Sean Cross]

****  Fix assertions with unique case inside, #2199. [hdzhangdoc]

****  Fix implicit conversion of floats to wide integers.


* Verilator 4.030 2020-03-08

**    Add split_var metacomment to assist UNOPTFLAT fixes, #2066. [Yutetsu TAKATSUKASA]

**    Add support for $dumpfile and $dumpvars, #2126. [Alexander Grobman]

**    Add support for dynamic arrays, #379.

***   Add +verilator+noassert flag to disable assertion checking. [Tobias Wölfel]

***   Add check for assertOn for asserts, #2162. [Tobias Wölfel]

***   Add --structs-packed for forward compatibility.

***   Fix genblk naming with directly nested generate blocks, #2176. [Alexander Grobman]

****  Implement $displayb/o/h, $writeb/o/h, etc, #1637.

****  Use gcc -Os in examples instead of -O2 for better average performance.

****  Fix undeclared VL_SHIFTR_WWQ, #2114. [Alex Solomatnikov]

