@@ -4819,10 +4819,12 @@ configured with --enable-prec11.  This flag will be removed and C++11
 compilers will be required for both compiling Verilator and compiling
 Verilated models no sooner than September 2020.
 
-=item SystemC 2.1 and earlier support
+=item SystemC 2.2 and earlier support
 
-Support for SystemC versions 2.1 and earlier and the related sc_clock
-variable attribute will be removed no sooner than July 2020.
+Support for SystemC versions 2.2 and earlier including the related sc_clock
+variable attribute will be removed no sooner than August 2020.  The
+supported versions will be SystemC 2.3.0 (SYSTEMC_VERSION 20111121) and
+later (presently 2.3.0, 2.3.1, 2.3.2, 2.3.3).
 
 =item Configuration File -msg
 
